--- a/TestHarness/build.xml
+++ b/TestHarness/build.xml
@@ -20,7 +20,7 @@
         <pathelement location="${dependencies}/commons-io-2.6.jar"/>
         <pathelement location="${dependencies}/junit-4.12.jar"/>
         <pathelement location="${dependencies}/hamcrest-all-1.3.jar"/>
-        <pathelement location="${dependencies}/offline-signer-v2.jar"/>
+        <pathelement location="${dependencies}/offline-signer-5114e24.jar"/>
         <pathelement location="${dependencies}/ed25519.jar"/>
         <pathelement location="${dependencies}/modAionBase.jar"/>
         <pathelement location="${dependencies}/modRlp.jar"/>
@@ -40,7 +40,7 @@
                 <pathelement location="${dependencies}/modAionBase.jar"/>
                 <pathelement location="${dependencies}/modRlp.jar"/>
                 <pathelement location="${dependencies}/modUtil.jar"/>
-                <pathelement location="${dependencies}/offline-signer-v2.jar"/>
+                <pathelement location="${dependencies}/offline-signer-5114e24.jar"/>
                 <pathelement location="${dependencies}/gson-2.8.5.jar"/>
             </modulepath>
         </javac>
