--- a/Tests/test_resources/custom/config/fork.properties
+++ b/Tests/test_resources/custom/config/fork.properties
@@ -1,5 +1,3 @@
 fork0.3.2=0
 fork0.4.0=0
-# TODO ONLY SET TO A HIGH VALUE UNTIL EXTERNAL STAKER IS ADDED
-fork0.5.0=10000000
-fork1.0=10000000
+fork1.0=4
