Updated readme and directory name assumptions
-this fixes some inconsistencies in the documentation as well as some stale directory name assumptions left over from recent rename
-NOTE:  The TestHarness tests now assume that the kernel is installed in "Tests/oan" instead of sometimes installed there and sometimes in TestHarness

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .classpath
 .project
 .settings/
+bin/
 
 # IntelliJ
 .idea/
@@ -16,12 +17,10 @@
 *out
 build
 TestHarness/dist
-TestHarness/aion
 TestHarness/reports
 TestHarness/logs
-Tests/aion
+Tests/oan
 Tests/config
 Tests/logs
-Tests/lib/kernel.tar.bz2
 .gradle/
 report/
