Added the integTest task so "./gradlew :TestHarness:integTest" now runs the integration tests

--- a/TestHarness/build.gradle
+++ b/TestHarness/build.gradle
@@ -26,6 +26,12 @@ sourceSets {
     }
 }
 
+// We need to define how to scoop the test classes for the integTest target, since that is not default Gradle behaviour.
+task integTest(type: Test) {
+    testClassesDirs = sourceSets.integTest.output.classesDirs
+    classpath = sourceSets.integTest.runtimeClasspath
+}
+
 dependencies {
     compile fileTree(dir: 'lib', include: ['*.jar'])
 }
