--- a/Tests/test_resources/custom/config/fork.properties
+++ b/Tests/test_resources/custom/config/fork.properties
@@ -1,3 +1,16 @@
-fork0.3.2=0
-fork0.4.0=0
-fork1.0=4
+{
+  "fork": [
+    {
+      "ver":"0.3.2",
+      "block":"0"
+    },
+    {
+      "ver":"0.4.0",
+      "block": "0"
+    },
+    {
+      "ver":"1.0",
+      "block": "4"
+    }
+  ]
+}
